tests/neg/i11118.scala
// https://github.com/scala/scala3/issues/11118
val (a,b) = (1,2,3) // error // warning
